--- a/collections/_posts/2024-08-21-puzzles.md
+++ b/collections/_posts/2024-08-21-puzzles.md
@@ -15,4 +15,4 @@ If you reach out I'm happy to give hints.
 
 Otherwise, good luck! 🧩
 
-![Puzzle pack](/images/posts/2024-08-21-puzzles/puzzles20240821.pdf)
+[Puzzle pack](/images/posts/2024-08-21-puzzles/puzzles20240821.pdf)
