Attempting to embed puzzle pack

--- a/collections/_posts/2024-08-21-puzzles.md
+++ b/collections/_posts/2024-08-21-puzzles.md
@@ -16,4 +16,4 @@ If you reach out I'm happy to give hints.
 Otherwise, good luck! 🧩
 
 
-[Puzzle pack]({{ site.url }}/images/posts/2024-08-21-puzzles/puzzles20240821.pdf)
+<object data="{{ site.url }}/images/posts/2024-08-21-puzzles/puzzles20240821.pdf" width="1000" height="1000" type='application/pdf'></object>
