Adding direct link

--- a/collections/_posts/2024-08-21-puzzles.md
+++ b/collections/_posts/2024-08-21-puzzles.md
@@ -11,9 +11,11 @@ Puzzles. I'm addicted to solving them. I'm a beginner at setting them.
 
 I made some puzzles for my colleagues a few months ago - a cryptic crossword (the clues involve wordplay) and a variant sudoku (sudoku with extra rules).
 
+Online version for the sudoku here: [https://f-puzzles.com/?id=yncaqkeo](https://f-puzzles.com/?id=yncaqkeo)
+No online version for the cryptic as I made it in Excel.
+
 If you reach out I'm happy to give hints.
 
 Otherwise, good luck! 🧩
-
 
 <object data="{{ site.url }}/images/posts/2024-08-21-puzzles/puzzles20240821.pdf" width="1000" height="1000" type='application/pdf'></object>
